# ESP32Project

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/rtosTasks/: CMakeLists.txt  CommonVariablesAllTasks.c  CommonVariablesAllTasks.h  InitTasks.c  InitTasks.h  MQTTPublishTask.c  MQTTPublishTask.h  MQTTReadTask.c  MQTTReadTask.h  PeriodicReadTask.c  PeriodicReadTask.h  ReadSensorTask.c  ReadSensorTask.h  ReadUserButtonTask.c  ReadUserButtonTask.h  UpdateFirmwareTask.c  UpdateFirmwareTask.h
components/sensor/: CMakeLists.txt  SensorData.h  SensorTempHum.c  SensorTempHum.h
components/wifimqtt/: CMakeLists.txt  MQTT_GenerateMessage.c  MQTT_GenerateMessage.h  MQTT_Message.h  TriggerType.h  WiFiMQTT.c  WiFiMQTT.h
main/: CMakeLists.txt  Kconfig.projbuild  SensorTempHum.c  TriggerType.h  main.c  mytasks.c
main/certs/: instructions.txt
main/include/: EventSource.h  MQTT_Message.h  SensorData.h  SensorTempHum.h  mytasks.h
